# gcn-dongle-rs

./: .gitignore  Cargo.toml  USB_SERIAL.md  flash.sh  memory.x  monitor-serial.sh
.cargo/: config.toml
src/: controller.rs  controller_state.rs  main.rs  usb_logger.rs
